- Variable Favorites from before data migration cannot be edited, nor added to new workbooks - Variable favorites will display their version - migration required

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -44,6 +44,16 @@
   .panel-body
     margin-bottom: 50px
 
+#variable_list
+  .dropdown-menu
+    li>span
+      padding: 3px 10px
+      &.disabled
+        pointer-events: auto
+        color: #676767
+        cursor: not-allowed
+
+
 #variable_edit
   li.program-tab
     width: (100% / 5)
