--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -127,7 +127,7 @@
   height: 28px
   padding: 2px 5px
 
-.workbook-build-display
+.workbook-build-display, .workbook-ver-display
   font-size: 16px
   span
     font-weight: 600
