--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -108,7 +108,7 @@
                         <div class="col-sm-{{ cohort.get_current_filters.keys|get_prog_col_size }} prog-filter-set">
                         <h5>{{ prog }}</h5>
                         {% for filter in filters %}
-                            <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                            <span class="filter-label label label-default space-right-5">{{ filter.displ_name }}: {{ filter.displ_val }}</span>
                         {% endfor %}
                         </div>
                     {% empty %}
@@ -149,7 +149,7 @@
                                      <li class="applied-filters">
                                         Applied Filters:
                                          {% for filter in item.vals %}
-                                            <span>{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                                            <span>{{ filter.displ_name }}: {{ filter.displ_value }}</span>
                                          {% endfor %}
                                     </li>
                                 {%  else %}
@@ -174,7 +174,7 @@
                                 <div class="col-sm-{{ cohort.get_creation_filters.keys|get_prog_col_size }} creation-prog-filter-set">
                                 <h6>{{ prog }}</h6>
                                 {% for filter in filters %}
-                                    <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                                    <span class="filter-label label label-default space-right-5">{{ filter.displ_name }}: {{ filter.displ_val }}</span>
                                 {% endfor %}
                                 </div>
                             {% empty %}
