--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -146,12 +146,16 @@
                         <ul>
                             {% for item in cohort.get_revision_history %}
                                 {%  if 'type' in item and item.type == 'filter' %}
-                                     <li class="applied-filters">
-                                        Applied Filters:
-                                         {% for filter in item.vals %}
-                                            <span>{{ filter.displ_name }}: {{ filter.displ_value }}</span>
-                                         {% endfor %}
-                                    </li>
+                                    <div class="panel-body creation-filter-panel">
+                                        {% for prog, filters in item.vals.items %}
+                                            <div class="col-sm-{{ item.vals.keys|get_prog_col_size }} creation-prog-filter-set">
+                                            <h6>{{ prog }}</h6>
+                                            {% for filter in filters %}
+                                                <span class="filter-label label label-default space-right-5">{{ filter.displ_name }}: {{ filter.displ_val }}</span>
+                                            {% endfor %}
+                                            </div>
+                                        {% endfor %}
+                                    </div>
                                 {%  else %}
                                     <li>{{ item }}</li>
                                 {%  endif %}
