-> The cohort details panel will resize accordingly if there is a revision history -> Revision history filters are now displayed by program

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -46,6 +46,21 @@
         .label
             margin: 0
 
+    .revision-filter-panel
+        overflow: hidden
+        padding: 0
+        .revision-prog-filter-set
+            height: 100%
+            padding: 0px 8px !important
+        .prog-filter-set
+            border-left: 2px solid $isb-primary
+            h5
+                margin-top: 0
+        :first-child
+            border-left: none
+        .label
+            margin: 0
+
     .creation-filter-panel
         height: 100%
 
