-> Variable favorite details pages will now list the version -> Fixed a bug where the check for varfave versions was disallowing any editing

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -61,3 +61,9 @@
     a
       padding: 10px 9px
       display: block
+
+.varfave-ver-display
+  margin-top: 15px
+  font-size: 14px
+  span
+    font-weight: 600
