--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -25,6 +25,7 @@
     <section class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">{{ variables.name }}</h4>
+            <p class="varfave-ver-display"><span>Version: </span> {{ variables.get_readable_version }}</p>
         </div>
         <div class="panel-body">
             <h5>Selected Variables</h5>
