-> Changing workbook build must reset fields and datatype selectors

--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -19,7 +19,9 @@
     </ol>
     <h1 class="page-header">{{ workbook.name }}</h1>
     <p class="workbook-ver-display"><span>Version: </span> {% if not workbook.build %}Version 1{% else %}Version 2{% endif %}</p>
-    <p class="workbook-build-display" data-plot-version="{% if not workbook.build %}v1{% else %}v2{% endif %}"><span>Build: </span> {% if not workbook.build %}Legacy{% else %}{{ workbook.build }}{% endif %}</p>
+    <p class="workbook-build-display" data-plot-version="{% if not workbook.build %}v1{% else %}v2{% endif %}"
+       data-build="{% if not workbook.build %}None{% else %}{{ workbook.build }}{% endif %}">
+        <span>Build: </span> {% if not workbook.build %}Legacy{% else %}{{ workbook.build }}{% endif %}</p>
     <p>{{ workbook.description }}</p>
     <ul class="page-action-group" role="menubar">
         {% if workbook.owner.id == request.user.id %}
