--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -122,7 +122,7 @@
                                                         <li class="list-group-item checkbox">
                                                             <div id="heading-{{ attr.name }}" class="list-group-item__heading">
                                                                 <label>
-                                                                    <input class="variable-toggle-checkbox" value="{{ attr.name }}" type="checkbox" var_type="{{ attr.type }}" name="elements-selected" data-text-label="{{ attr.displ_name }}">
+                                                                    <input class="variable-toggle-checkbox" value="{{ attr.name }}" data-code="{{ attr.data_code }}" type="checkbox" var_type="{{ attr.type }}" name="elements-selected" data-text-label="{{ attr.displ_name }}">
                                                                     {{ attr.displ_name }}
                                                                 </label>
                                                             </div>
