-> Beginning to fix the base_url problem

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
     {%  endif %}
     <script>
         var STATIC_FILES_URL = '{{ STATIC_FILES_URL }}';
+        var BASE_URL = '{{ BASE_URL }}' || "";
     </script>
 </head>
 <body id="body">
