--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -336,7 +336,7 @@
 {% include "workbooks/workbook_modals.html" %}
 
 <script type="text/javascript">
-    var base_api_url            = '{{ BASE_API_URL|safe }}';
+    var base_url            = '{{ BASE_URL|safe }}';
     var display_worksheet_id    = '{{ display_worksheet.id|safe }}';
     var workbook_id             = '{{ workbook.id }}';
 </script>
