-> Correct 'empty set' labels for Gene&miRNA section of dashboard

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -166,9 +166,9 @@
                         <a href="{% url 'genes' %}" class="btn btn-link float-right">View All</a>
                         {% endif %}
                     {% else %}
-                    <p>You don't have any saved Gene Favorites.</p>
+                    <p>You don't have any saved Gene & miRNA Favorites.</p>
                     {% endif %}
-                    <a href="{% url 'gene_fav_create' %}" class="btn btn-link">Create Gene Favorites</a>
+                    <a href="{% url 'gene_fav_create' %}" class="btn btn-link">Create Gene & miRNA Favorites</a>
                 </div>
             </section>
             <section class="panel panel-default">
