-> Allow for cross-project data access

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -168,7 +168,7 @@
                     {% else %}
                     <p>You don't have any saved Gene & miRNA Favorites.</p>
                     {% endif %}
-                    <a href="{% url 'gene_fav_create' %}" class="btn btn-link">Create Gene & miRNA Favorites</a>
+                    <a href="{% url 'gene_fav_create' %}" class="no-cap btn btn-link">Create Gene & miRNA Favorites</a>
                 </div>
             </section>
             <section class="panel panel-default">
