-> Fixed Data Avail. plot for TARGET -> Fixed age at diagnosis for TCGA in filter panel -> Worksheets cannot be duplicated or added to v1 workbooks

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -292,7 +292,7 @@
         overflow-y: auto
         overflow-x: hidden
 
-    #multi-categorical
+    .multi-categorical
         overflow-x: auto
         min-height: 100px
         svg
