--- a/blink_sass/search.sass
+++ b/blink_sass/search.sass
@@ -164,7 +164,7 @@
     #file-access a
         text-decoration: underline
 
-    #multi-categorical
+    .multi-categorical
         overflow-x: scroll
         svg
             display: block
