--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -231,7 +231,7 @@
             </div>
             <div class="panel-body">
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                <div id="multi-categorical"></div>
+                <div class="multi-categorical" id="multi-categorical-{{ program.id }}"></div>
             </div>
         </div>
         {% endif %}
