--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -99,7 +99,8 @@
                     <form id="view-igv" method="POST" action="{% url 'igv' %}">
                         <input type="text" class="hidden_form_value" id="checked_list_input" name="checked_list" data-type="checked_list">
                         {% csrf_token %}
-                        <p>Showing 20 files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
+                        <p class="file-page-count">Showing 20 files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
+                        <p class="no-file-page-count" style="display: none;">Showing 0 files.</p>
                         <div>
                             <a role="button" id="prev-page" class="btn btn-primary disabled">Previous Page</a>
                             <a role="button" id="next-page" class="btn btn-primary">Next Page</a>
