-> Fixed a bug where variables chosen from pre-existing faves lists would duplicate on selection; they should now properly identify as the same no matter where they come from

--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -226,7 +226,7 @@
                                                     <li class="checkbox">
                                                         <div id="heading-{{ var.id }}">
                                                             <label>
-                                                                <input class="variable-toggle-checkbox" type="checkbox" value="{{ var.code }}" name="elements-selected" data-text-label="{{ var.name }}" {% if var.feature %}data-feature-id="{{ var.feature.id }}"{% endif %}>
+                                                                <input class="variable-toggle-checkbox" type="checkbox" value="{{ var.code }}" var_type="{{ var.type }}" data-code="{{ var.code }}" name="elements-selected" data-text-label="{{ var.name }}" {% if var.feature %}data-feature-id="{{ var.feature.id }}"{% endif %}>
                                                                 {{ var.name }}
                                                             </label>
                                                         </div>
