-> client_email provided for registering GCP projects will now be set from the context processor

--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="row space-bottom-10">
                             <div class="col-lg-6">
-                                Paste <code>907668440978-oskt05du3ao083cke14641u35deokgjj@developer.gserviceaccount.com</code> in the text box.
+                                Paste <code>{{ GCP_REG_CLIENT_EMAIL }}</code> in the text box.
                             </div>
                             <div class="col-lg-6">
                                  <img src="{% static 'img/add-members.png' %}" alt="Add Member Modal Window" width="100%"/>
