-> Fix for #1838, bad URI for cohort selection in Worksheet ready-checklist -> Fix for #1930, TCGA HG38 BAMs will now provide an explicit BAM index path -> Shim for HG38 in IGV until we can recompile it to be current -> Added explicit build specification when IGV is launched

--- a/templates/GenespotRE/igv.html
+++ b/templates/GenespotRE/igv.html
@@ -55,13 +55,13 @@
         {% endfor %}
 
         {% for row in bam_list %}
-        <div class="bam-data" data-sample="{{ row.sample_barcode }}" data-gcs="{{ row.gcs_path }}"></div>
+        <div class="bam-data" data-sample="{{ row.sample_barcode }}" data-gcs="{{ row.gcs_path }}" data-build="{{ row.build }}" data-program="{{ row.program }}"></div>
         {% endfor %}
 
     </div>
     <script>
-
     var service_account = '{{ service_account }}';
+    var genome_build = '{{ build }}';
     </script>
 {% endblock %}
 
